@@ -4,8 +4,8 @@
   </p>
   <p class="message">
     <%=h @chat.message %>
-  </p>
-  <p class="time">
-    <%=h @chat.created_at %>
+    <span class="time">
+      <%=h @chat.created_at %>
+    </span>
   </p>
 </li>
