@@ -4,10 +4,11 @@
 + 4 minor enhancements:
   + Disabled caching when back.
   + Added meteor_helper.
-  + Added workaround for Safari's strange behaviour after back navigation.
   + Added timer to remove forsaken iframes for Safari.
-+ 1 minor bugfix:
+  + Added configuration option 'sweep_timeout'.
++ 2 minor bugfixes:
   + Solved problem on caching of browsers of MacOS.
+  + Added workaround for Safari's strange behaviour after back navigation.
 
 *** 1.0.3 / 2007-03-22
 + 2 major enhancements:
